CFNInit.yaml
AWSTemplateFormatVersion: "2010-09-09"
Metadata: 
  License: Apache-2.0
Description: A simple example to create a Cloud Formation stack to spin up an EC2 instance in Sydney region

Parameters: 
  NameOfService: 
    Description: The name of the service this stack is used for.
    Type: String
  KeyName:
    Description: Name an existing EC2 Key Pair to enable SSH access into the server.
    Type: AWS::EC2::KeyPair::KeyName

Mappings: 
  RegionMap: 
    us-east-1: 
      AMI: ami-1853ac65
    ap-southeast-2: 
      AMI: ami-33f92051

Resources:
  EC2Instance:
    Type: 'AWS::EC2::Instance'
    Metadata: 
      AWS::CloudFormation::Init: 
        config: 
          packages: 
            yum:
              httpd: []
              php: []
          files: 
            /var/www/html/index.php:
              content: !Sub |
                <?php print "Hello Swapnil!"; ?>
          services: 
            sysvinit:
              httpd:
                enabled: true
                ensureRunning: true
    Properties:
      ImageId: 
        Fn::FindInMap:
          - RegionMap
          - !Ref AWS::Region
          - AMI
      InstanceType: t2.micro
      SecurityGroups:
        - !Ref MySecurityGroup
      Tags:
        - Key: "Name"
          Value: !Ref NameOfService
      KeyName: !Ref KeyName
      UserData:
        'Fn::Base64': 
          !Sub |
            #!/bin/bash -xe
            # Ensure AWS CFN bootstrap is latest
            yum install -y aws-cfn-bootstrap
            # Install the files and packages from the metadata
            /opt/aws/bin/cfn-init -v --stack ${AWS::StackName} --resource EC2Instance --region ${AWS::Region}

  MySecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties: 
      GroupDescription: Enable SSH access via port 22
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 0.0.0.0/0

Outputs:
  Website:
    Description: The public DNS for the EC2 instance
    Value: !Sub 'http://${EC2Instance.PublicDnsName}'
